fix align issue (#585)

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -122,7 +122,7 @@ _:-ms-fullscreen, :root .main {
   font-weight: 500;
   display: flex;
   font-size: 14px;
-  height: 45px;
+  line-height: 45px;
   align-items: center;
 }
 
